Fixed bug where save and load were not shown on mobile
Fixed it by changing layout so there are now four icons on top with less
text. Easier to read everything on the bottom as well

--- a/app/css/stylesheet.css
+++ b/app/css/stylesheet.css
@@ -56,6 +56,10 @@
 	font-size: 2vh;
 }
 
+.txt3{
+	font-size:2vh;
+}
+
 .txtBig{
 	font-size: 5vh;
 }
@@ -143,10 +147,6 @@ md-list-item{
 	width: 280px;
 }
 
-md-list{
-	height:100%;
-}
-
 .displayblock{
 	display:inline-block;
 }
@@ -208,8 +208,7 @@ md-tab{
 }
 
 .scroll{
-	height:73vh;
-	width:100%;
+	height:90vh;
 	overflow-y:auto;
 	overflow-x:hidden;
 }
@@ -227,12 +226,7 @@ md-tab{
 }
 
 @media screen and (max-width: 1280px){
-	.scroll{
-		height:73vh;
-		width:100%;
-		overflow-y:auto;
-		overflow-x:hidden;
-	}
+
 
 	.mobileScroll{
 		overflow-y:auto;
